--- a/Ch08/src/main/resources/templates/member/modify.html
+++ b/Ch08/src/main/resources/templates/member/modify.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 	<h3>직원수정</h3>
-	<form action="/Ch08/member/modify.do" method="post">
+	<form th:action="@{/member/modify}" method="post">
 		<table border="1">
 			<tr>
 				<td>아이디</td>
-				<td><input type="text" name="uid" value="${member.uid}" readonly="readonly" /></td>
+				<td><input type="text" name="uid" readonly th:value="${memberVo.uid}"/></td>
 			</tr>
 			<tr>
 				<td>이름</td>
-				<td><input type="text" name="name" value="${member.name}"/></td>
+				<td><input type="text" name="name" th:value="${memberVo.name}"/></td>
 			</tr>
 			<tr>
 				<td>휴대폰</td>
-				<td><input type="text" name="hp" value="${member.hp}"/></td>
+				<td><input type="text" name="hp" th:value="${memberVo.hp}"/></td>
 			</tr>
 			<tr>
 				<td>직급</td>
