--- a/Ch08/src/main/resources/templates/member/register.html
+++ b/Ch08/src/main/resources/templates/member/register.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h3>직원등록</h3>
-	<form action="/Ch08/member/register.do" method="post">
+	<form th:action="@{/member/register}" method="post">
 		<table border="1">
 			<tr>
 				<td>아이디</td>
