--- a/Sboard/src/main/resources/templates/list.html
+++ b/Sboard/src/main/resources/templates/list.html
@@ -16,29 +16,36 @@
                 </p>
                 <table border="0">
                     <tr>
-                        <th>[[${session.sessArticle.seq}]]</th>
+                        <th>번호</th>
                         <th>제목</th>
                         <th>글쓴이</th>
                         <th>날짜</th>
                         <th>조회</th>
                     </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a th:href="@{/view.html}">테스트 제목입니다.</a>&nbsp;[3]</td>
-                        <td>길동이</td>
-                        <td>20-05-12</td>
-                        <td>12</td>
+                    <tr th:each="article, i:${articles}">
+                        <td>[[${pageStartNum-i.index}]]</td>
+                        <td><a th:href="@{/view(seq=${article.seq})}">[[${article.title}]]</a>&nbsp;&#91;[[${article.comment}]]&#93;</td>
+                        <td>[[${article.uid}]]</td>
+                        <td>[[${article.rdate.substring(2, 10)}]]</td>
+                        <td>[[${article.hit}]]</td>
                     </tr>
                 </table>
             </article>
 
             <!-- 페이지 네비게이션 -->
             <div class="paging">
-                <a href="#" class="prev">이전</a>
-                <a href="#" class="num current">1</a>                
-                <a href="#" class="num">2</a>                
-                <a href="#" class="num">3</a>                
-                <a href="#" class="next">다음</a>
+            
+          		<th:black th:if="${groups[0] > 1}">
+               		<a href="${/list(pg=${groups[0]-1})}" class="prev">이전</a>
+              	</th:black>
+               	
+   	            <th:black th:each="num:${#numbers.sequence(groups[0], groups[1])}">
+                	<a th:href="@{/list(pg=${num})}" th:class="${num == currentPage ? 'num current':'num'}">[[${num}]]</a>              
+                </th:black>
+	               
+                <th:black th:if="${groups[1] < lastPageNum}">
+                	<a href="${/list(pg=${groups[1]+1})}" class="next">다음</a>
+               	</th:black>
             </div>
 
             <!-- 글쓰기 버튼 -->
