--- a/Sboard/src/main/resources/templates/write.html
+++ b/Sboard/src/main/resources/templates/write.html
@@ -10,8 +10,8 @@
         <section id="board" class="write">
             <h3>글쓰기</h3>
             <article>
-               <form th:action="@{/write}" method="post">
-               <input type="hidden" name="uid" th:value="${session.sessMember.uid"/>
+               <form th:action="@{/write}" method="post" enctype="multipart/form-data">
+               <input type="hidden" name="uid" th:value="${session.sessMember.uid}"/>
                     <table>
                         <tr>
                             <td>제목</td>
