2021/10/26 aside, 각목록에 맞게 수정완료 img이름수정완료

--- a/Farmstory/src/main/resources/templates/introduction/direction.html
+++ b/Farmstory/src/main/resources/templates/introduction/direction.html
@@ -9,10 +9,10 @@
     <div id="wrapper">
         <th:block th:include="/_header.html"></th:block>
         <div id="sub">
-            <div><img src="../img/sub_top_tit1.png" alt="INTRODUCTION"></div>
+            <div><img th:src="@{/img/sub_top_tit1.png}" alt="INTRODUCTION"></div>
             <section class="cate1">
                 <aside>
-                    <img src="../img/sub_aside_cate1_tit.png" alt="팜스토리 소개"/>
+                    <img th:src="@{/img/sub_aside_cate1_tit.png}" alt="팜스토리 소개"/>
 
                     <ul class="lnb">
                         <li><a th:href="@{/introduction/hello}">인사말</a></li>
@@ -22,7 +22,7 @@
                 </aside>
                 <article>
                     <nav>
-                        <img src="../img/sub_nav_tit_cate1_tit2.png" alt="찾아오시는길"/>
+                        <img th:src="@{/img/sub_nav_tit_cate1_tit2.png}" alt="찾아오시는길"/>
                         <p>
                             HOME > 팜스토리소개 > <em>찾아오시는길</em>
                         </p>
