--- a/Farmstory/src/main/resources/templates/_header.html
+++ b/Farmstory/src/main/resources/templates/_header.html
@@ -11,8 +11,8 @@
     <ul class="gnb">
         <li><a th:href="@{/introduction/hello}">팜스토리소개</a></li>
         <li><a th:href="@{/board/list(group=Market)}"><img th:src="@{/img/head_menu_badge.png}" alt="30%"/>장보기</a></li>
-        <li><a th:href="@{/board/list(group=Croptalk)}">농작물이야기</a></li>
+        <li><a th:href="@{/board/list(group=Croptalk,cate=story)}">농작물이야기</a></li>
         <li><a th:href="@{/board/list(group=Event)}">이벤트</a></li>
-        <li><a th:href="@{/board/list(group=Community)}">커뮤니티</a></li>
+        <li><a th:href="@{/board/list(group=Community,cate=notice)}">커뮤니티</a></li>
     </ul>
 </header>
