--- a/Farmstory/src/main/resources/templates/board/_asideCroptalk.html
+++ b/Farmstory/src/main/resources/templates/board/_asideCroptalk.html
@@ -14,9 +14,12 @@
         </aside>
         <article>
             <nav>
-                <img th:src="@{/img/sub_nav_tit_cate3_tit1.png}" alt="농작물이야기"/>
+                <img th:src="@{/img/sub_nav_tit_cate3_{cate}.png(cate=${cate})}" alt="농작물이야기"/>
                 <p>
-                    HOME > 농작물이야기 > <em>농작물이야기</em>
+                    HOME > 농작물이야기 > 
+                    <em th:if="${cate}=='story'">농작물이야기</em>
+                    <em th:if="${cate}=='grow'">텃밭가꾸기</em>
+                    <em th:if="${cate}=='school'">귀농학교</em>
                 </p>
             </nav>
 
