2021/10/27 로그인까지 완료 로그아웃하면됨

--- a/Farmstory/src/main/resources/templates/board/_asideCommunity.html
+++ b/Farmstory/src/main/resources/templates/board/_asideCommunity.html
@@ -16,7 +16,7 @@
         </aside>
         <article>
             <nav>
-                <img th:src="@{/img/sub_nav_tit_cate5_{cate}.png(cate=${cate})}" alt="공지사항"/>
+                <img th:src="@{/img/sub_nav_tit_cate5_{cate}.png(cate=${cate})}" alt="커뮤니티"/>
                 <p>
                     HOME > 커뮤니티 > 
                     <em th:if="${cate}=='notice'">공지사항</em>
