--- a/Farmstory/src/main/resources/templates/board/_asideEvent.html
+++ b/Farmstory/src/main/resources/templates/board/_asideEvent.html
@@ -6,9 +6,7 @@
             <img th:src="@{/img/sub_aside_cate4_tit.png}" alt="이벤트"/>
 
             <ul class="lnb">
-                <li class="on"><a th:href="@{/board/list}">농작물이야기</a></li>
-                <li><a th:href="@{/board/list}">텃밭가꾸기</a></li>
-                <li><a th:href="@{/board/list}">귀농학교</a></li>
+                <li class="on"><a th:href="@{/board/list(group=Event)}">이벤트</a></li>
             </ul>
 
         </aside>
