--- a/Farmstory/src/main/resources/templates/board/_asideMarket.html
+++ b/Farmstory/src/main/resources/templates/board/_asideMarket.html
@@ -6,7 +6,7 @@
             <img th:src="@{/img/sub_aside_cate2_tit.png}" alt="장보기"/>
 
             <ul class="lnb">
-                <li class="on"><a th:href="@{/board/list}">장보기</a></li>
+                <li class="on"><a th:href="@{/board/list(group=Market)}">장보기</a></li>
             </ul>
 
         </aside>
