--- a/Farmstory/src/main/resources/templates/board/list.html
+++ b/Farmstory/src/main/resources/templates/board/list.html
@@ -20,9 +20,9 @@
                         <th>날짜</th>
                         <th>조회</th>
                     </tr>
-                    <tr>
-                        <td>1</td>
-                        <td><a th:href="@{/board/view(group=${group})}">제목</a>&nbsp;&#91;3&#93;</td>
+                    <tr> <!-- th:each="article, i:${articles}" -->
+                        <td>[]</td>
+                        <td><a th:href="@{/board/view(group=${group},cate=${cate})}">뭘줘야할까낭?</a>&nbsp;&#91;3&#93;</td>
                         <td>abcd</td>
                         <td>21-10-26</td>
                         <td>12</td>
@@ -38,7 +38,7 @@
             </div>
 
             <!-- 글쓰기 버튼 -->
-            <a th:href="@{/board/write(group=${group})}" class="btnWrite">글쓰기</a>
+            <a th:href="@{/board/write(group=${group},cate=${cate})}" class="btnWrite">글쓰기</a>
         </section>
         
     	
