--- a/Farmstory/src/main/resources/templates/market/market.html
+++ b/Farmstory/src/main/resources/templates/market/market.html
@@ -3,37 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>팜스토리::장보기</title>
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-    <div id="wrapper">    
-        <div id="sub">
-            <div><img src="../img/sub_top_tit2.png" alt="MARKET"></div>
-            <section class="cate2">
-                <aside>
-                    <img src="../img/sub_aside_cate2_tit.png" alt="장보기"/>
-
-                    <ul class="lnb">
-                        <li class="on"><a href="./market.html">장보기</a></li>
-                    </ul>
-                </aside>
-                <article>
-                    <nav>
-                        <img src="../img/sub_nav_tit_cate2_tit1.png" alt="장보기"/>
-                        <p>
-                            HOME > 장보기 > <em>장보기</em>
-                        </p>
-                    </nav>
-
-                    <!-- 내용 시작 -->
-
-
-                    <!-- 내용 끝 -->
-
-                </article>
-            </section>
-
-        </div>     
+    <div id="wrapper">   
+    	<th:block th:include="@{/_header.html}"></th:block> 
+	        <div id="sub">
+	            <section class="cate2">
+	                <article>
+	
+	                    <!-- 내용 시작 -->
+	
+	
+	                    <!-- 내용 끝 -->
+	
+	                </article>
+	            </section>
+	        </div>     
+        <th:block th:include="@{/_footer.html}"></th:block>
     </div>    
 </body>
 </html>
