--- a/Farmstory/src/main/resources/templates/member/register.html
+++ b/Farmstory/src/main/resources/templates/member/register.html
@@ -6,7 +6,85 @@
     <link rel="stylesheet" th:href="@{/css/style.css}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script th:src="@{/js/zipcode.js}"></script>
+    <script>
+    
+    	$(function(){
+			
+			$('input[name=uid]').focusout(function(){
+				//alert('포커스아웃!');
+				
+				// 입력한 아이디 가져오기 현재에 쓴 value값을 가져옴
+				var uid = $(this).val();  
+			
+				
+				// Json Data 생성- 자바스크립트 언어임 {} <- json표기
+				var jsonData = {'uid':uid};
+				
+				$.get('/member/checkUid', jsonData, function(data){
+					
+						if(uid == ''){
+							$('.resultId').css('color','red').text('아이디를 입력하세요.')
+						}else if(data.result == 1){
+							$('.resultId').css('color','red').text('이미 아이디가 존재합니다.')
+						}else{
+							$('.resultId').css('color','green').text('사용가능한 아이디 입니다.')
+						}
+					}, 'json',);
+				});
+			
+				$('input[name=pass2]').focusout(function(){
+					var pass1 = $('input[name=pass1]').val();
+					var pass2 = $(this).val();
+					
+					if(pass1 == pass2){
+						$('.resultPass').css('color','green').text('일치합니다')
+					}else{
+						$('.resultPass').css('color','red').text('불일치합니다')
+					}
+				});
+				
+				$('input[name=nick]').focusout(function(){
+					var nick = $(this).val();
+					var jsonData = {'nick':nick};
+					
+					$.get('/member/checkNick', jsonData, function(data) {
+						if(data.result == 1){
+							$('.resultNick').css('color','red').text('이미 존재하는 Nick입니다.')
+						}else{
+							$('.resultNick').css('color','green').text('사용가능한 Nick 입니다.')
+						}
+					}, 'json',);
+				});
+				
+				$('input[name=email]').focusout(function(){
+					var email = $(this).val();
+					var jsonData = {'email':email};
+					
+					$.get('/member/checkEmail', jsonData, function(data){
+						if(data.result == 1){
+							$('.resultEmail').css('color','red').text('이미 존재하는 Email입니다.')	
+						}else{
+							$('.resultEmail').css('color','green').text('사용 가능한 Email입니다.')
+						}
+					}, 'json',);
+				});
+				
+				$('input[name=hp]').focusout(function(){
+					var hp = $(this).val();
+					var jsonData = {'hp':hp};
+					
+					$.get('/member/checkHp', jsonData, function(data){
+					
+						if(data.result == 1){
+							$('.resultHp').css('color','red').text('이미 존재하는 Hp입니다.')	
+						}else{
+							$('.resultHp').css('color','green').text('사용 가능한 Hp입니다.')
+						}
+					}, 'json',);
+				});
+			});
+	
+    </script>
 </head>
 <body>
     <div id="wrapper">
@@ -63,6 +141,7 @@
                         <td>휴대폰</td>
                         <td>
                             <input type="text" name="hp" placeholder="- 포함 13자리 입력" minlength="13" maxlength="13" />
+                            <span class="resultHp"></span>
                         </td>
                     </tr>
                     <tr>
