--- a/Farmstory/src/main/resources/templates/member/terms.html
+++ b/Farmstory/src/main/resources/templates/member/terms.html
@@ -7,35 +7,35 @@
 </head>
 <body>
     <div id="wrapper">
-    <th:block th:include="/_header.html"></th:block>
-        <section id="user" class="terms">
-            <table>
-                <caption>사이트 이용약관</caption>
-                <tr>
-                    <td>
-                        <textarea readonly></textarea>
-                        <p>
-                            <label><input type="checkbox" name="chk1"/>동의합니다.</label>
-                        </p>
-                    </td>
-                </tr>
-            </table>
-            <table>
-                <caption>개인정보 취급방침</caption>
-                <tr>
-                    <td>
-                        <textarea readonly></textarea>
-                        <p>
-                            <label><input type="checkbox" name="chk2"/>동의합니다.</label>
-                        </p>
-                    </td>
-                </tr>
-            </table>
-            <div>
-                <a th:href="@{/member/login}">취소</a>
-                <a th:href="@{/member/register}">다음</a>
-            </div>
-        </section>
+	    <th:block th:include="/_header.html"></th:block>
+	        <section id="user" class="terms">
+	            <table>
+	                <caption>사이트 이용약관</caption>
+	                <tr>
+	                    <td>
+	                        <textarea readonly>[[${termsVo.terms}]]</textarea>
+	                        <p>
+	                            <label><input type="checkbox" name="chk1"/>동의합니다.</label>
+	                        </p>
+	                    </td>
+	                </tr>
+	            </table>
+	            <table>
+	                <caption>개인정보 취급방침</caption>
+	                <tr>
+	                    <td>
+	                        <textarea readonly>[[${termsVo.privacy}]]</textarea>
+	                        <p>
+	                            <label><input type="checkbox" name="chk2"/>동의합니다.</label>
+	                        </p>
+	                    </td>
+	                </tr>
+	            </table>
+	            <div>
+	                <a th:href="@{/member/login}">취소</a>
+	                <a th:href="@{/member/register}">다음</a>
+	            </div>
+	        </section>
         <th:block th:include="/_footer.html"></th:block>
     </div>
     
