2021/11/02 회원가입 데이터 성공 중복체크하기

--- a/Kmarket/src/main/resources/templates/member/login.html
+++ b/Kmarket/src/main/resources/templates/member/login.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <div id="member-wrapper">
-        <header>
-            <a href="#"><img src="../img/header_logo.png" alt=""></a>
-        </header>
+        <th:block th:include="@{/member/_header.html}"></th:block>
         <main>
             <div id="member-login">
                 <img src="../img/member_txt_login.gif" alt="로그인" />
