--- a/Kmarket/src/main/resources/templates/member/join.html
+++ b/Kmarket/src/main/resources/templates/member/join.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <div id="member-wrapper">
-        <header>
-            <a href="#"><img src="../img/header_logo.png" alt=""></a>
-        </header>
+       <th:block th:include="@{/member/_header.html}"></th:block>
         <main>
             <div id="member-join">
                 <img src="../img/member_join_tit_welcome.gif" class="welcome" alt="케이마켓에 오신것을 환영합니다." >
@@ -18,14 +16,14 @@
                         <img src="../img/member_join_tit_normal.gif" alt="구매회원 가입">
                         <div class="txt">
                             <img src="../img/member_join_txt_normal.gif" alt="개인 구매회원">
-                            <a href="../member/signup.do?type=normal"><img src="../img/member_join_btn1.gif" alt="회원가입"></a>
+                            <a th:href="@{/member/signup(type=1)}"><img src="../img/member_join_btn1.gif" alt="회원가입"></a>
                         </div>
                     </div>
                     <div class="seller">
                         <img src="../img/member_join_tit_seller.gif" alt="판매회원 가입">
                         <div class="txt">
                             <img src="../img/member_join_txt_seller.gif" alt="개인 구매회원">
-                            <a href="../member/signup.do?type=seller"><img src="../img/member_join_btn2.gif" alt="회원가입"></a>
+                            <a th:href="@{/member/signup(type=2)}"><img src="../img/member_join_btn2.gif" alt="회원가입"></a>
                         </div>
                     </div>
                 </div>
