--- a/Kmarket/src/main/resources/templates/admin/product/list.html
+++ b/Kmarket/src/main/resources/templates/admin/product/list.html
@@ -13,17 +13,7 @@
 </head>
 <body>
     <div id="admin-wrapper">
-        <header>
-            <div>
-                <a th:href="@{/admin/index.html}" class="logo"><img th:src="@{/admin/img/admin_logo.png}" alt="admin_logo"/></a>
-                <p>
-                    <span>홍길동님 반갑습니다.</span>
-                    <a href="#">HOME |</a>
-                    <a href="#">로그아웃 |</a>
-                    <a href="#">고객센터</a>
-                </p>
-            </div>
-        </header>
+         <th:block th:include="@{/admin/_header.html}"></th:block>
         <main>
             <aside>
                 <!-- Global Navigation Bar -->
@@ -196,11 +186,7 @@
                 <!-- 상품목록 컨텐츠 끝 -->
             </section>
         </main>
-        <footer>
-            <div>
-                <p>Copyright ©kmarket.co.kr All rights reserved. KMARKET ADMINISTRATOR Version 5.4.1.2</p>
-            </div>
-        </footer>
+        <th:block th:include="@{/admin/_footer.html}"></th:block>
     </div>    
 </body>
 </html>
