--- a/Kmarket/src/main/resources/templates/member/register.html
+++ b/Kmarket/src/main/resources/templates/member/register.html
@@ -12,14 +12,12 @@
 	var reUid  = /^[a-z]+[a-z0-9]{3,10}$/;
 	var rePass = /^(?=.*[a-zA-Z])(?=.*[0-9]).{4,}$/;
 	var reName = /^[가-힣]{2,10}$/;
-	var reNick = /^[a-z가-힣0-9]{2,10}$/;
 
 
 	// 최종 유효성 검사에 사용될 상태변수
 	var isUidOk  = false;
 	var isPassOk = false;
 	var isNameOk = false;
-	var isNickOk = false;
 	
 	
 	$(document).ready(function(){
@@ -39,15 +37,15 @@
 			$.get('/member/checkUid', jsonData, function(data){
 					
 		 			if(data.result == 1){
-						$('.resultId').css('color', 'red').text('이미 사용중인 아이디 입니다.');
+						$('.msgId').css('color', 'red').text('이미 사용중인 아이디 입니다.');
 						isUidOk = false;
 					}else{
 						//아이디 유효성 검사
 						if(reUid.test(uid)){
-							$('.resultId').css('color','green').text('사용 가능한 아이디 입니다.');
+							$('.msgId').css('color','green').text('사용 가능한 아이디 입니다.');
 							isUidOk = true;
 						}else{
-							$('.resultId').css('color','red').text('아이디는 영문 소문자, 숫자 조합 4~10자 까지 입니다.');
+							$('.msgId').css('color','red').text('아이디는 영문 소문자, 숫자 조합 4~10자 까지 입니다.');
 						}
 					}
 				},'json');/*-> return 되는 형식을 지정해주기위하여 json을 사용해주엇다 */ 	
@@ -56,21 +54,21 @@
 		// 비밀번호 유효성 검사
 		$('input[name=pass2]').focusout(function(){
 			
-			var pass1 = $('input[name=pass1]').val();
+			var pass1 = $('input[name=pass]').val();
 			var pass2 = $('input[name=pass2]').val();
 			
 			if(pass1 == pass2){
 				
 				if(rePass.test(pass2)){
-					$('.resultPass').css('color', 'green').text('비밀번호가 일치 합니다.');
+					$('.msgPass2').css('color', 'green').text('비밀번호가 일치 합니다.');
 					isPassOk = true;
 				}else{				
-					$('.resultPass').css('color', 'red').text('비밀번호는 영문,숫자 조합 최소 4이상 이어야 합니다.');
+					$('.msgPass1').css('color', 'red').text('비밀번호는 영문,숫자 조합 최소 4이상 이어야 합니다.');
 					isPassOk = false;
 				}
 				
 			}else{
-				$('.resultPass').css('color', 'red').text('비밀번호가 일치 하지 않습니다.');
+				$('.msgPass2').css('color', 'red').text('비밀번호가 일치 하지 않습니다.');
 				isPassOk = false;
 			}
 			
@@ -83,35 +81,14 @@
 			 var jsonData = {'name':name};
 	
 			if(reName.test(name)){
+				$('.msgName').css('color', 'blue').text('이름이 유효합니다.');
 				isNameOk = true;
 			}else{
-				$('.resultName').css('color', 'red').text('이름이 유효하지 않습니다.');
+				$('.msgName').css('color', 'red').text('이름이 유효하지 않습니다.');
 				isNameOk = false;
 			}	
 		});
 		
-		// 닉네임 중복 체크
-		$('input[name=nick]').focusout(function(){
-			
-			var nick = $(this).val();
-			var jsonData = {'nick':nick};
-			
-			$.get('/member/checkNick', jsonData, function(data){
-				
-				if(data.result == 1){
-					$('.resultNick').css('color', 'red').text('이미 사용중인 닉네임 입니다.');
-					isNickOk = false;
-				}else{
-					if(reNick.test(nick)){
-						$('.resultNick').css('color','green').text('사용 가능한 닉네임 입니다.');
-						isNickOk = true;
-					}else{
-						$('.resultNick').css('color', 'red').text('닉네임은 영문, 한글, 숫자포함 2~10자 입니다.');
-						isNickOk = false;
-					}
-				}
-			},'json');
-		});
 		
 		// 이메일 중복 체크
 		$('input[name=email]').focusout(function(){
@@ -120,11 +97,11 @@
 		    	
 		    	$.get('/member/checkEmail',jsonData, function(data){
 		    		if(email==''){
-		    			$('.resultEmail').css('color','red').text('유효하지 않은 이메일입니다. 이메일을 다시 입력해주세요.');
+		    			$('.msgEmail').css('color','red').text('유효하지 않은 이메일입니다. 이메일을 다시 입력해주세요.');
 		    		}else if(data.result == 1) {
-		    			$('.resultEmail').css('color','red').text('이미 사용중인 이메일입니다.');
+		    			$('.msgEmail').css('color','red').text('이미 사용중인 이메일입니다.');
 		    		}else {
-		    			$('.resultEmail').css('color','green').text('사용가능한 이메일입니다.');
+		    			$('.msgEmail').css('color','green').text('사용가능한 이메일입니다.');
 		    		}
 		    	},'json'); 
 		    	
@@ -136,11 +113,11 @@
 		    	
 		    	$.get('/member/checkHp',jsonData, function(data){
 		    		if(hp==''){
-		    			$('.resultHp').css('color','red').text('유효하지 않은 전화번호입니다. 번호를 다시 입력해주세요.');
+		    			$('.msgHp').css('color','red').text('유효하지 않은 전화번호입니다. 번호를 다시 입력해주세요.');
 		    		}else if(data.result == 1) {
-		    			$('.resultHp').css('color','red').text('이미 사용중인 전화번호입니다.');
+		    			$('.msgHp').css('color','red').text('이미 사용중인 전화번호입니다.');
 		    		}else {
-		    			$('.resultHp').css('color','green').text('사용가능한 전화번호입니다.');
+		    			$('.msgHp').css('color','green').text('사용가능한 전화번호입니다.');
 		    		}
 		    	},'json'); 
 		    	
@@ -167,11 +144,12 @@
 							<tr>
 								<th><span class="essential">*</span>비밀번호</th>
 								<td><input type="password" name="pass" placeholder="비밀번호를 입력" required /> 
-								<span class="msgPass">영문, 숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span></td>
+								<span class="msgPass1">영문, 숫자, 특수문자를 조합하여 8~12자까지 설정해 주세요.</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>비밀번호확인</th>
-								<td><input type="password" name="pass2" placeholder="비밀번호를 확인" required /> <span class="msgPass">비밀번호 재입력</span></td>
+								<td><input type="password" name="pass2" placeholder="비밀번호를 확인" required /> 
+								<span class="msgPass2">비밀번호 재입력</span></td>
 							</tr>
 						</table>
 					</section>
@@ -180,7 +158,8 @@
 							<caption>기본 정보입력</caption>
 							<tr>
 								<th><span class="essential">*</span>이름</th>
-								<td><input type="text" name="name" placeholder="이름을 입력" required /></td>
+								<td><input type="text" name="name" placeholder="이름을 입력" required />
+								<span class="msgName">한글이름만 써주세요</span></td>
 							</tr>
 							<tr>
 								<th><span class="essential">*</span>성별</th>
@@ -193,6 +172,7 @@
 								<th><span class="essential">*</span>EMAIL</th>
 								<td>
 									<input type="email" name="email" placeholder="이메일 입력" required />
+									<span class="msgEmail">@포함 정확한 이메일 주소를 써주세요</span></td>
 								</td>
 							</tr>
 							<tr>
