--- a/Kmarket/src/main/resources/templates/product/cart.html
+++ b/Kmarket/src/main/resources/templates/product/cart.html
@@ -22,7 +22,9 @@
        <th:block th:include="@{/_header.html}"></th:block>
         <main>
             <!-- 카테고리/베스트 상품 영역 -->
-            <th:block th:include="@{/_aside.html}"></th:block>
+           <aside>
+                <th:block th:include="@{_category.html}"/>
+            </aside>
 
             <!-- 장바구니 -->
             <section id="cart">
