--- a/Kmarket/src/main/resources/templates/admin/_header.html
+++ b/Kmarket/src/main/resources/templates/admin/_header.html
@@ -3,8 +3,8 @@
         <a th:href="@{/admin/index.html}" class="logo"><img th:src="@{/admin/img/admin_logo.png}" alt="admin_logo"/></a>
         <p>
             <span>홍길동님 반갑습니다.</span>
-            <a href="#">HOME |</a>
-            <a href="#">로그아웃 |</a>
+            <a th:href="@{/}">HOME |</a>
+            <a th:href="@{/member/logout}">로그아웃 |</a>
             <a href="#">고객센터</a>
         </p>
     </div>
