--- a/Kmarket/src/main/resources/templates/index.html
+++ b/Kmarket/src/main/resources/templates/index.html
@@ -41,10 +41,108 @@
 </head>
 <body>
     <div id="wrapper">
-        <th:block th:include="@{/_header.html}"></th:block>
+        <th:block th:include="@{_header.html}"/>
         <main>
             <!-- 카테고리/베스트 상품 영역 -->
-           <th:block th:include="@{/_aside.html}"></th:block>
+            <aside>
+                <!-- 카테고리 -->
+                <th:block th:include="@{_category.html}"/>
+
+                <!-- 베스트상품 배너 -->
+                <article class="best">
+                  <h1><i class="fas fa-crown"></i>베스트상품</h1>
+                  <ol>
+                    <li>
+                      <a href="#">
+                        <div class="thumb">
+                          <i>1</i>
+                          <img src="./img/thumb-popular-item1.jpg" alt="item1">
+                        </div>
+                        <h2>TH-파스텔드레스셔츠 - 그린</h2>
+                        <div class="org_price">
+                          <del>30,000</del>
+                          <span>10%</span>
+                        </div>
+                        <div class="dis_price">
+                          <ins>27,000</ins>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="thumb">
+                          <i>2</i>
+                          <img src="./img/thumb-sample-t1.jpg" alt="item1">
+                        </div>
+                        <article>
+                          <h2>TH-파스텔드레스셔츠 - 그린</h2>
+                          <div class="org_price">
+                            <del>30,000</del>
+                            <span>10%</span>
+                          </div>
+                          <div class="dis_price">
+                            <ins>27,000</ins>
+                          </div>
+                        </article>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="thumb">
+                          <i>3</i>
+                          <img src="./img/thumb-sample-t2.jpg" alt="item1">
+                        </div>
+                        <article>
+                          <h2>TH-파스텔드레스셔츠 - 그린</h2>
+                          <div class="org_price">
+                            <del>30,000</del>
+                            <span>10%</span>
+                          </div>
+                          <div class="dis_price">
+                            <ins>27,000</ins>
+                          </div>
+                        </article>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="thumb">
+                          <i>4</i>
+                          <img src="./img/thumb-sample-t3.jpg" alt="item1">
+                        </div>
+                        <article>
+                          <h2>TH-파스텔드레스셔츠 - 그린</h2>
+                          <div class="org_price">
+                            <del>30,000</del>
+                            <span>10%</span>
+                          </div>
+                          <div class="dis_price">
+                            <ins>27,000</ins>
+                          </div>
+                        </article>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <div class="thumb">
+                          <i>5</i>
+                          <img src="./img/thumb-sample-t4.jpg" alt="item1">
+                        </div>
+                        <article>
+                          <h2>TH-파스텔드레스셔츠 - 그린</h2>
+                          <div class="org_price">
+                            <del>30,000</del>
+                            <span>10%</span>
+                          </div>
+                          <div class="dis_price">
+                            <ins>27,000</ins>
+                          </div>
+                        </article>
+                      </a>
+                    </li>
+                  </ol>
+                </article>
+            </aside>
             <section>
                 <!-- 슬라이더 영역 -->
                 <section class="slider">
@@ -620,7 +718,7 @@
                 </section>
             </section>
         </main>
-       	<th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"/>
         <button type="button" id="top">상단이동</button>
     </div>    
 </body>
