--- a/Kmarket/src/main/resources/templates/product/search.html
+++ b/Kmarket/src/main/resources/templates/product/search.html
@@ -24,7 +24,9 @@
       <th:block th:include="@{/_header.html}"></th:block>
       <main>
         <!-- 카테고리/베스트 상품 영역 -->
-        <th:block th:include="@{/_aside.html}"></th:block>
+        <aside>
+            <th:block th:include="@{_category.html}"/>
+        </aside>
 
         <section id="search">
           <nav>
