--- a/Kmarket/src/main/resources/templates/product/view.html
+++ b/Kmarket/src/main/resources/templates/product/view.html
@@ -17,7 +17,9 @@
        <th:block th:include="@{/_header.html}"></th:block>
         <main>
             <!-- 카테고리/베스트 상품 영역 -->
-            <th:block th:include="@{/_aside.html}"></th:block>
+            <aside>
+                <th:block th:include="@{_category.html}"/>
+            </aside>
 
             <!-- 상품 상세페이지 -->
             <section id="view">                
