--- a/Kmarket/src/main/resources/templates/_header.html
+++ b/Kmarket/src/main/resources/templates/_header.html
@@ -12,7 +12,7 @@
     <div class="logo">
         <div>
             <a th:href="@{/}"><img th:src="@{/img/header_logo.png}" alt="로고"/></a>
-            <form action="#">
+            <form th:action="@{/product/search}" method="get">
                 <input type="text" name="search"/>
                 <button><i class="fa fa-search"></i></button>
             </form>                
