--- a/Kmarket/src/main/resources/templates/product/cart.html
+++ b/Kmarket/src/main/resources/templates/product/cart.html
@@ -10,19 +10,147 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>    
-    <style>    
-
-        
-
-    </style>
+    <link rel="stylesheet" th:href="@{/css/style.css}">    
+<script>
+	//장바구니 전체 집계
+	$(function() {
+		
+		var cartProduct = $('.cartProduct'); // 클래스는 . 붙이고 cartProduct
+		
+		// 상품 수 집계
+		var countTds = cartProduct.find('.count');
+		var totCount = 0;
+		
+		$.each(countTds, function() {
+			var count = parseInt($(this).text());
+			totCount += count;
+		});
+		
+		$('.info .count').text(totCount);
+		
+		// 판매가 집계
+		var priceTds = cartProduct.find('.price');
+		var totPrice = 0;
+		
+		$.each(priceTds, function() {
+			var price = parseInt($(this).text().replace(/,/g,''));
+			totPrice += price;
+			
+		});
+		
+		$('.info .price').text(totPrice.toLocaleString());
+		
+		// 할인금액 집계
+		var discountTds = cartProduct.find('.discount');
+		var totDiscount = 0;
+		
+		$.each(discountTds, function() {
+		
+			var price	 = parseInt($(this).prev().text().replace(/,/g, '')); //parseInt:숫자로가져옴
+			var discount = parseInt($(this).text().replace(/,/g, ''));
+			
+			totDiscount += (price * discount / 100);
+			
+			
+		});
+		
+		$('.info .discount').text(totDiscount.toLocaleString());
+		
+		
+		// 배송비 집계
+		
+		var deliveryTds = cartProduct.find('.delivery');
+		var totDelivery = 0;
+		
+		$.each(deliveryTds, function() {
+			var delivery = $(this).text().replace(/,/g,'');
+			
+			if(delivery != '무료배송'){
+				totDelivery += parseInt(delivery);
+			}
+		});
+		
+		$('.info .delivery').text(totDelivery.toLocaleString());
+		
+		// 포인트 집계
+		
+		var pointTds = cartProduct.find('.point');
+		var totPoint = 0;
+		
+		$.each(pointTds, function() {
+			var point = parseInt($(this).text().replace(/,/g,''));
+			totPoint += point;
+			
+		});
+		
+		$('.info .point').text(totPoint.toLocaleString());
+		
+		
+		// 전체주문금액 집계
+		
+		var totalTds = cartProduct.find('.total');
+		var totTotal= 0;
+		
+		$.each(totalTds, function() {
+			var total = parseInt($(this).text().replace(/,/g,''));
+			totTotal += total;
+			
+		});
+		
+		$('.info .total').text(totTotal.toLocaleString());
+	});
+	
+	// 선택삭제
+	$(function() {
+		
+		// 삭제버튼
+		$('input[name=del]').click(function() {
+			
+			var checkedProduct = $('input[name=checkProduct]:checked');
+		
+			if(checkedProduct.length == 0){
+				alert('삭제하고자 하는 상품을 선택하세요.');
+				return;
+			}
+			
+			$.each(checkedProduct, function() {
+				var cartId = $(this).val();
+				alert(cartId);
+			});
+			
+			var jsonData = {};
+			
+			// 삭제 요청하기
+			$.ajax({
+				url:'/product/cartDelete',
+				type:'get',
+				dataType:'json',
+				success:function(data){}
+			});
+			
+		});
+		
+		// 전체 체크박스 체크/해지
+		$('input[name=all]').change(function() { //is : 상태
+			if($(this).is(':checked')){ // 현재 체크되었다면
+				// 전체 상품 체크박스 체크
+				$('input[name=checkProduct]').prop('checked', true); //prop:프로퍼티 속성함수, 제이쿼리 체크박스 함수 검색 ㄱㄱ싱
+				
+			}else{
+				// 전체 상품 체크박스 해지
+				$('input[name=checkProduct]').prop('checked', false);
+			}
+		});		
+	});
+	
+</script>      
 </head>
 <body>
     <div id="wrapper">
-       <th:block th:include="@{/_header.html}"></th:block>
+        <th:block th:include="@{_header.html}"/>
         <main>
             <!-- 카테고리/베스트 상품 영역 -->
-           <aside>
+            <aside>
                 <th:block th:include="@{_category.html}"/>
             </aside>
 
@@ -33,7 +161,7 @@
               <nav>
                 <h1>장바구니</h1>
                 <p>
-                  HOME > <span>패션·의류·뷰티</span> > <strong>장바구니</strong>
+                  HOME > <strong>장바구니</strong>
                 </p>
               </nav>
               
@@ -55,22 +183,26 @@
                       <tr class="empty">
                         <td colspan="7">장바구니에 상품이 없습니다.</td>
                       </tr>
-                      <tr>
-                        <td><input type="checkbox" name=""></td>
+                      <tr th:each="product:${cartProducts}" class="cartProduct">
+                        <td><input type="checkbox" name="checkProduct" th:value="${product.cartId}"></td>
                         <td>
                           <article>
-                            <a href="#"><img src="../img/thumb-sample-t2.jpg" alt=""></a>
+                            <a href="#">
+                            	<img th:src="@{/thumb/{cate1}/{cate2}/{img}(cate1=${product.cate1}, cate2=${product.cate2}, img=${product.thumb1})}" alt="상품 이미지"/>
+                            </a>
                             <div>
-                              <h2><a href="#">TH-블락체크 셔츠-그레이2 [면세]</a></h2>
-                              <p>SIZE:M / COLOR:블루 1개</p>
+                              <h2><a href="#">[[${product.name}]]</a></h2>
+                              <p></p>
                             </div>
                           </article>
                         </td>
-                        <td>1</td>
-                        <td>27,000</td>
-                        <td>270</td>
-                        <td>무료배송</td>
-                        <td>27,000</td>
+                        <td class="count">[[${product.count}]]</td>
+                        <td class="price">[[${#numbers.formatInteger(product.price, 3, 'COMMA')}]]</td>
+                        <td class="discount">[[${product.discount}]]%</td>
+                        <td class="point">[[${product.point}]]</td>
+                        <td class="delivery" th:if="${product.delivery == 0}">무료배송</td>
+                        <td class="delivery" th:if="${product.delivery != 0}">[[${#numbers.formatInteger(product.delivery, 3, 'COMMA')}]]</td>
+                        <td class="total">[[${#numbers.formatInteger(product.total, 3, 'COMMA')}]]</td>
                       </tr>
                     </tbody>
                   </table>
@@ -83,39 +215,34 @@
                 <table border="0">
                   <tr>
                     <td>상품수</td>
-                    <td>1</td>
+                    <td class="count">1</td>
                   </tr>
                   <tr>
                     <td>상품금액</td>
-                    <td>27,000</td>
+                    <td class="price">27,000</td>
                   </tr>
                   <tr>
                     <td>할인금액</td>
-                    <td>-1,000</td>
+                    <td class="discount">-1,000</td>
                   </tr>
                   <tr>
                     <td>배송비</td>
-                    <td>0</td>
+                    <td class="delivery">0</td>
                   </tr>              
                   <tr>
                     <td>포인트</td>
-                    <td>260</td>
+                    <td class="point">260</td>
                   </tr>
                   <tr>
                     <td>전체주문금액</td>
-                    <td>26,000</td>
+                    <td class="total">26,000</td>
                   </tr>
                 </table>
                 <input type="button" name="" value="주문하기">
-    
               </div>
-              
-
-
-
             </section>
         </main>
-        <th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"/>
         <button type="button" id="top">상단이동</button>
     </div>    
 </body>
