2021/11/11 장바구니 물건 삭제하고 reflash

--- a/Kmarket/src/main/resources/templates/product/cart.html
+++ b/Kmarket/src/main/resources/templates/product/cart.html
@@ -131,7 +131,8 @@
 				data:jsonData,
 				dataType:'json',
 				success:function(data){
-					alert(data.result);
+					//alert(data.result);
+					location.href='/product/cart';
 				}
 			});
 			
